--- a/setup.cfg
+++ b/setup.cfg
@@ -7,14 +7,16 @@ author_email = info@martin-thoma.de
 maintainer = Martin Thoma
 maintainer_email = info@martin-thoma.de
 
-version = 0.0.1
+version = 0.0.3
 
 description = A modern pure-python library for reading PDF files
 long_description = file: README.md
 long_description_content_type = text/markdown
 keywords = PDF
 
-url = https://github.com/MartinThoma/flake8-simplify
+url = https://github.com/py-pdf/pdf
+project_urls =
+    Changelog = https://github.com/py-pdf/pdf/blob/main/CHANGELOG.md
 license = BSD
 license_file = LICENSE
 
