--- a/.isort.cfg
+++ b/.isort.cfg
@@ -3,5 +3,5 @@ line_length=79
 indent='    '
 multi_line_output=3
 length_sort=0
-known_third_party =PyPDF2,setuptools
+known_third_party =PyPDF2,pytest,setuptools
 include_trailing_comma=True
