--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,8 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
     -   id: mixed-line-ending
+    -   id: check-added-large-files
+        args: ['--maxkb=1000']
 -   repo: https://gitlab.com/pycqa/flake8
     rev: 3.9.2
     hooks:
